p2/conf/app3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
spec:
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
        - name: apache
          image: httpd:latest
          ports:
            - containerPort: 80
